# simpleorbitmodel

./: .gitignore  CMakeLists.txt  Makefile
src/: body.c  body.h  main.c
